# s3-testing

./: .gitignore  README.md  compose-axum.yaml  compose-gin.yaml  compose.yaml
axum/: Cargo.toml  Dockerfile
axum/src/: entities.rs  main.rs  s3_connector.rs
axum/src/entities/: mod.rs  song_params.rs
fastify/: package-lock.json  package.json  s3_connector.js  server.js
fastify_s3_endpoints/: Fastify test.bru  bruno.json
gin/: Dockerfile  entities.go  go.mod  go.sum  main.go  s3_connector.go
requests/axum_s3_endpoints/: Axum test.bru  Get song.bru  Put song.bru  bruno.json
requests/fastify_s3_endpoints/: Get song.bru  Put song.bru  bruno.json
requests/gin_s3_endpoints/: Get song.bru  Put song.bru  bruno.json
