[package]
name = "axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = {version = "1.48.0", features = ["full"]}
tower = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.109.0"
anyhow = "1.0.100"
